--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>処世術禄</title>
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="自己啓発・心理学・行動科学・対人術・キャリア論などを７つのOS・200の項目に集約した「処世術の体系書」。成功、対人関係、仕事力、内面・感情、人生設計など、現代を生き抜くための実践的な知恵を提供します。" />
+  <meta name="description" content="ケース別処世術と体系処世術をまとめた処世術禄。成功、対人関係、仕事力、内面・感情、人生設計など、現代を生き抜くための実践的な知恵を提供します。" />
   <meta name="keywords" content="処世術,自己啓発,心理学,行動科学,対人術,キャリア,成功術,仕事術,人間関係,自己成長,ライフハック,メンタル,感情管理" />
   <meta name="author" content="人生の処世術200" />
   <meta name="robots" content="index, follow" />
@@ -16,7 +16,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://roku-brand.github.io/art-of-living/" />
   <meta property="og:title" content="人生の処世術200" />
-  <meta property="og:description" content="自己啓発・心理学・行動科学・対人術・キャリア論などを７つのOS・200の項目に集約した「処世術の体系書」。成功、対人関係、仕事力、内面・感情、人生設計など、現代を生き抜くための実践的な知恵を提供します。" />
+  <meta property="og:description" content="ケース別処世術と体系処世術をまとめた処世術禄。成功、対人関係、仕事力、内面・感情、人生設計など、現代を生き抜くための実践的な知恵を提供します。" />
   <meta property="og:image" content="https://roku-brand.github.io/art-of-living/icons/icon-512.png" />
   <meta property="og:site_name" content="人生の処世術200" />
   <meta property="og:locale" content="ja_JP" />
@@ -24,7 +24,7 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="人生の処世術200" />
-  <meta name="twitter:description" content="自己啓発・心理学・行動科学・対人術・キャリア論などを７つのOS・200の項目に集約した「処世術の体系書」。成功、対人関係、仕事力、内面・感情、人生設計など、現代を生き抜くための実践的な知恵を提供します。" />
+  <meta name="twitter:description" content="ケース別処世術と体系処世術をまとめた処世術禄。成功、対人関係、仕事力、内面・感情、人生設計など、現代を生き抜くための実践的な知恵を提供します。" />
   <meta name="twitter:image" content="https://roku-brand.github.io/art-of-living/icons/icon-512.png" />
 
   <!-- Structured Data / JSON-LD -->
@@ -33,7 +33,7 @@
     "@context": "https://schema.org",
     "@type": "WebSite",
     "name": "人生の処世術200",
-    "description": "自己啓発・心理学・行動科学・対人術・キャリア論などを７つのOS・200の項目に集約した「処世術の体系書」。成功、対人関係、仕事力、内面・感情、人生設計など、現代を生き抜くための実践的な知恵を提供します。",
+    "description": "ケース別処世術と体系処世術をまとめた処世術禄。成功、対人関係、仕事力、内面・感情、人生設計など、現代を生き抜くための実践的な知恵を提供します。",
     "url": "https://roku-brand.github.io/art-of-living/",
     "inLanguage": "ja"
   }
