Update page title metadata

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>処世術禄</title>
+  <title>処世術禄―自己啓発・心理学・行動科学・対人術を集約した「処世術の体系書」</title>
 
   <!-- SEO Meta Tags -->
   <meta name="description" content="ケース別処世術と体系処世術をまとめた処世術禄。成功、対人関係、仕事力、内面・感情、人生設計など、現代を生き抜くための実践的な知恵を提供します。" />
@@ -15,7 +15,7 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://roku-brand.github.io/art-of-living/" />
-  <meta property="og:title" content="人生の処世術200" />
+  <meta property="og:title" content="処世術禄―自己啓発・心理学・行動科学・対人術を集約した「処世術の体系書」" />
   <meta property="og:description" content="ケース別処世術と体系処世術をまとめた処世術禄。成功、対人関係、仕事力、内面・感情、人生設計など、現代を生き抜くための実践的な知恵を提供します。" />
   <meta property="og:image" content="https://roku-brand.github.io/art-of-living/icons/icon-512.png" />
   <meta property="og:site_name" content="人生の処世術200" />
@@ -23,7 +23,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="人生の処世術200" />
+  <meta name="twitter:title" content="処世術禄―自己啓発・心理学・行動科学・対人術を集約した「処世術の体系書」" />
   <meta name="twitter:description" content="ケース別処世術と体系処世術をまとめた処世術禄。成功、対人関係、仕事力、内面・感情、人生設計など、現代を生き抜くための実践的な知恵を提供します。" />
   <meta name="twitter:image" content="https://roku-brand.github.io/art-of-living/icons/icon-512.png" />
 
@@ -32,7 +32,7 @@
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
-    "name": "人生の処世術200",
+    "name": "処世術禄―自己啓発・心理学・行動科学・対人術を集約した「処世術の体系書」",
     "description": "ケース別処世術と体系処世術をまとめた処世術禄。成功、対人関係、仕事力、内面・感情、人生設計など、現代を生き抜くための実践的な知恵を提供します。",
     "url": "https://roku-brand.github.io/art-of-living/",
     "inLanguage": "ja"
@@ -51,7 +51,7 @@
   <link rel="apple-touch-icon" href="./icons/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="apple-mobile-web-app-title" content="処世術200" />
+  <meta name="apple-mobile-web-app-title" content="処世術禄―自己啓発・心理学・行動科学・対人術を集約した「処世術の体系書」" />
 
   <link rel="stylesheet" href="./app.css" />
 
