Add compass icon and hero background

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta property="og:url" content="https://roku-brand.github.io/art-of-living/" />
   <meta property="og:title" content="処世術禄―自己啓発・心理学・行動科学・対人術を集約した「処世術の体系書」" />
   <meta property="og:description" content="ケース別処世術と体系処世術をまとめた処世術禄。成功、対人関係、仕事力、内面・感情、人生設計など、現代を生き抜くための実践的な知恵を提供します。" />
-  <meta property="og:image" content="https://roku-brand.github.io/art-of-living/icons/icon-512.png" />
+  <meta property="og:image" content="https://roku-brand.github.io/art-of-living/icons/icon.svg" />
   <meta property="og:site_name" content="人生の処世術200" />
   <meta property="og:locale" content="ja_JP" />
 
@@ -25,7 +25,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="処世術禄―自己啓発・心理学・行動科学・対人術を集約した「処世術の体系書」" />
   <meta name="twitter:description" content="ケース別処世術と体系処世術をまとめた処世術禄。成功、対人関係、仕事力、内面・感情、人生設計など、現代を生き抜くための実践的な知恵を提供します。" />
-  <meta name="twitter:image" content="https://roku-brand.github.io/art-of-living/icons/icon-512.png" />
+  <meta name="twitter:image" content="https://roku-brand.github.io/art-of-living/icons/icon.svg" />
 
   <!-- Structured Data / JSON-LD -->
   <script type="application/ld+json">
@@ -44,11 +44,11 @@
   <meta name="theme-color" content="#0b0f1a" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon.png" />
-  <link rel="icon" type="image/png" sizes="192x192" href="./icons/icon-192.png" />
+  <link rel="icon" type="image/svg+xml" href="./icons/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="./icons/icon.svg" />
 
   <!-- Apple Touch Icon (iOS) -->
-  <link rel="apple-touch-icon" href="./icons/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" href="./icons/icon.svg" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="処世術禄―自己啓発・心理学・行動科学・対人術を集約した「処世術の体系書」" />
